--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -11,7 +11,8 @@ body, html
     line-height: 0
     clear: both
     visibility: hidden
-
+.mr12
+  margin-right 12px
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) 
   .border-1px
     &:after
