--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -3,7 +3,7 @@ body, html
   font-weight: 200
   font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif
 .clearfix
-  display: inline-block
+  display: block
   &:after
     display: block
     content: "."
@@ -11,6 +11,10 @@ body, html
     line-height: 0
     clear: both
     visibility: hidden
+  .right
+    float right
+  .left
+    float left
 .mr12
   margin-right 12px
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) 
