--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -3,7 +3,7 @@ body, html
   font-weight: 200
   font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif
 .clearfix
-  display: block
+  display: inline-block
   &:after
     display: block
     content: "."
